This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2002-01-17 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/HierarchyMaintainer.hh, src/HierarchyMaintainer.cpp:
	added getExistingInstance(std::string). 
	* include/log4cpp/Category.hh, src/Category.cpp: 
	added exists(std::string).

2002-01-16 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/Category.hh, src/Category.cpp: fix bug #504314:
	added missing log methods for priority 'fatal'.

	* src/SimpleConfigurator.cpp: added 'stdout' and 'stderr' appenders.
	
2002-01-10 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* configure.in: added check for strcasecmp() and stricmp().
	* include/log4cpp/config-win32.h: have stricmp() but not strcasecmp().
	* include/log4cpp/Portability.hh: use stricmp() if strcasecmp() is
	not available.

	* include/log4cpp/RemoteSyslogAppender.hh: added SyslogFacility type.

2002-01-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/SimpleConfigurator.cpp: skip all whitespace before PatternLayout 
	pattern, not just one.

	* include/log4cpp/RollingFileAppender.cpp,
	include/log4cpp/Makefile.am,
	src/RollingFileAppender.cpp, src/MakeFile.am: 
	added RollingFileAppender contributed by Alex Tapaccos.
	
2002-01-08 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/SimpleConfigurator.cpp: skip space before PatternLayout 
	pattern (Bug #500766).

	* src/SimpleConfigurator.cpp: fix screwy fix for Bug #500766,
	now using Alex' method. (Obsoletes Patch #500832).

2002-01-04 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/config-openvms.h: #include <inttypes.h> for int64_t.

	* src/PatternLayout.cpp(doFormat): removed superfluous return
	statement.

	* include/log4cpp/config-win32.h: fix int64_t for Borland compiler.

	* include/log4cpp/SyslogAppender.hh,
	include/log4cpp/RemoteSyslogAppender.hh,
	src/SyslogAppender.cpp, src/RemoteSyslogAppender.cpp: